# VERENA-scraper

./: README.md  VerenaDownloader.py  VerenaExtractor.py  VerenaScraper.py  demo.py  pyproject.toml
tests/: ausschreibung_test_input.html  test_verena.py  test_verenadownloader.py  test_verenaextractor.py
verenascraper/: example.json  verenaextractor.py  verenascraper.py
